# django-expo-notifications

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
expo_notifications/: admin.py  apps.py  managers.py
expo_notifications/managers/: ticket_manager.py
expo_notifications/migrations/: 0001_initial.py
expo_notifications/models/: device.py  message.py  receipt.py  ticket.py
expo_notifications/tasks/: check_receipts_task.py  send_messages_task.py
tests/: conftest.py  factories.py  test_check_receipts_task.py  test_device.py  test_device_admin.py  test_device_manager.py  test_message.py  test_message_admin.py  test_message_manager.py  test_receipt.py  test_receipts_admin.py  test_send_messages_task.py  test_ticket.py  test_ticket_admin.py  test_ticket_manager.py  test_tickets_admin.py
tests/project/project/: settings.py
