[project]
name = "django-expo-notifications"
version = "0.0.0"
description = "Efficiently send and keep track of Expo push notifications with Django and Celery"
authors = [
    {name = "Jonathan Ehwald",email = "github@ehwald.info"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
