[project]
name = "django-expo-notifications"
version = "0.0.0"
description = "Efficiently send and keep track of Expo push notifications with Django and Celery"
authors = [
    {name = "Jonathan Ehwald",email = "github@ehwald.info"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django (>=4.2)",
    "celery (>=5.4)",
    "django-admin-anchors (>=4.2.0,<5.0.0)",
    "exponent-server-sdk (>=2.1.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "expo_notifications"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-django = "^4.10.0"
pytest-randomly = "^3.16.0"
factory-boy = "^3.3.3"
pre-commit = "^4.2.0"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.project.project.settings"
